--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,6 +1,13 @@
 steps:
-  - label: ":cpp: Build and Test"
-    command: "scripts/run_ut.sh"
+  - label: ":construction_worker: Build"
+    command: "scripts/build.sh"
+    key: build
     artifact_paths:
       - "build/*"
+
+- label: ":white_check_mark: Test"
+    command: "scripts/run_ut.sh"
+    artifact_paths:
       - "build/test-results.xml"
+    key: test
+    depends_on: build
