--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -13,5 +13,9 @@ steps:
       - artifacts#v1.1.0:
           download: "build/*"  # 下载上一步的构建物
 
+    plugins:
+      - junit-xml#v2.0.0:
+          files: "build/test-results.xml"
+
     artifact_paths:
       - "build/test-results.xml"
