--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -13,7 +13,7 @@ steps:
       - artifacts#v1.1.0:
           download: "build/*"  # 下载上一步的构建物
       - test-collector#v1.0.0:
-          files: "test/junit-*.xml"
+          files: "build/test-results.xml"
           format: "junit"
   
     artifact_paths:
