--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -11,7 +11,4 @@ steps:
     depends_on: build
     plugins:
       - artifacts#v1.1.0:
-          download: "build/*"  # 下载上一步的构建物
-      - test-collector#v1.0.0:
-          files: "build/test-results.xml"
-          format: "junit"
+          download: "build/*"  # download the artifacts produced by last step
