--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -18,7 +18,7 @@ steps:
           download: "build/*"  # download the artifacts produced by last step
   - wait: ~
 
-  - label: ""
+  - label: "Show unit test result"
     command: "echo visualize test result"
     plugins:
       - artifacts#v1.1.0:
